# wine-recommedation-app

./: .claudeignore  .clineignore  .clinerules  .gitignore  CLAUDE.md  HUMAN_NOTES.md  README.md
.claude/: settings.local.json
Wine Recommender/design_handoff_wine_recommender/: README.md
backend/: .env.example  auth.py  bootstrap.py  cache.py  cellar_terms.py  dependencies.py  inventory.json  inventory.py  logging_setup.py  logging_utils.py  main.py  meal_parser.py  middleware.py  models.py  openapi.json  palate_portrait.json  parser.py  profile.py  profile_data.json  prompt.py  pyproject.toml  rate_limit.py  recommender.py  requirements.txt  retry_utils.py  scorer.py  seed_profile.py  style_affinities.json  test_fixtures.py  wine_reviews.py
backend/logs/: recommendations.jsonl
backend/profiles/00000000-0000-0000-0000-000000000001/: inventory.json  profile_data.json
backend/routes/: auth.py  debug.py  history.py  inventory.py  profile.py  profiles.py  recommend.py
backend/tests/: conftest.py  test_meal_parser.py  test_openapi_sync.py  test_parser_text.py  test_scorer.py
docs/: mvp-ux-evaluation.md  next-level-recommendations.md  security-review.md  ux-improvement-plan.md  vinotheque-redesign-plan.md
docs/llm/: MEMORY.md  SUMMARY.md  architecture.md  context-guide.md  conventions.md  glossary.md  improvement-backlog.md  interfaces.md
frontend/: .env.example  index.html  package.json  screenshots.mjs  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  DebugPanel.tsx  FileUploader.tsx  InventoryStatusView.tsx  index.css  (+15 more)
tests/: model.py  test_basic.py
(+72 files in other folders)
