[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "wine-recommender-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "pydantic>=2.7.0",
    "anthropic>=0.32.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "pymupdf>=1.24.0",
]
